the basics of the timer and the displayed clock appear to be working in this version. I thought that the Timer paused when the screen locks but in this version it did not . Not 100% sure why.
Usable as a baseline for more advanced code.

--- a/Timers WatchKit App/Base.lproj/Interface.storyboard
+++ b/Timers WatchKit App/Base.lproj/Interface.storyboard
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14256" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14313.18" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch38" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14243"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14219"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14238.10"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Timers_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <label alignment="left" text="Timers" id="Dq9-dz-jHi"/>
+                        <separator alignment="left" id="ObE-H5-H7X"/>
+                        <label alignment="left" text="ClockData" textAlignment="center" id="USN-9v-aBp"/>
+                        <timer alignment="left" id="2J0-sY-PYc"/>
+                        <group width="1" alignment="left" id="3ta-Zd-jDM">
+                            <items>
+                                <button width="0.5" height="1" alignment="left" title="START" id="ra0-fw-wa7">
+                                    <connections>
+                                        <action selector="buttonStartStopPressed" destination="AgC-eL-Hgc" id="mID-ib-Xrh"/>
+                                    </connections>
+                                </button>
+                                <button width="0.5" height="1" alignment="left" title="RESET" id="5fV-kP-Onr">
+                                    <connections>
+                                        <action selector="buttonResetPressed" destination="AgC-eL-Hgc" id="j0O-56-huM"/>
+                                    </connections>
+                                </button>
+                            </items>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="buttonReset" destination="5fV-kP-Onr" id="Q86-no-WmK"/>
+                        <outlet property="buttonStartStop" destination="ra0-fw-wa7" id="eXe-Rw-6Hu"/>
+                        <outlet property="labelClock" destination="USN-9v-aBp" id="LbB-3O-y3G"/>
+                        <outlet property="timerMainDisplay" destination="2J0-sY-PYc" id="aWS-kA-tuP"/>
+                    </connections>
+                </controller>
             </objects>
             <point key="canvasLocation" x="220" y="345"/>
         </scene>
@@ -32,14 +62,14 @@
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="4sK-HA-Art" customClass="NotificationController" customModule="Timers_WatchKit_App" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="643"/>
         </scene>
         <!--Notification Controller-->
         <scene sceneID="Niz-AI-uX2">
             <objects>
-                <controller id="eXb-UN-Cd0" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="eXb-UN-Cd0" customClass="NotificationController" customModule="Timers_WatchKit_App" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="345"/>
         </scene>
